5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1764_1577.log
== TEST (2019-05-29 21:49:18) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

x = arange(n,1:N-1)
print(x)


-- ERROR:
File "XXXX", line 7
    x = arange(n,1:N-1)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:49:24) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

x = arange(n,1:n-1)
print(x)


-- ERROR:
File "XXXX", line 7
    x = arange(n,1:n-1)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:49:39) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

h = n-1
x = arange(n, 1:h)
print(x)


-- ERROR:
File "XXXX", line 8
    x = arange(n, 1:h)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:50:04) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

h = n-1
x = arange(n,n-1;)
print(x)


-- ERROR:
File "XXXX", line 8
    x = arange(n,n-1;)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:50:26) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

h = n-1
x = arange(n,0:1)
print(x)


-- ERROR:
File "XXXX", line 8
    x = arange(n,0:1)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:51:59) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

h = n-1
x = arange(n[0:n-1])
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:52:34) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

h = n-1
x = arange(n)
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:52:38) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

x = arange(n)
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:53:36) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())
h = n-1
x = arange(n[h])
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:53:56) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())
h = n-1
x = arange(eval(n[h]))
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:54:27) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())
h = n-1
x = arange(n[h],dtypes=int)
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:57:19) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

x = array(n[:n-1])

print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:15:54) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0
x = zeros(n)
y = arange(n-1)
while size(x) >= h:
	h += 1
	i += 1
print(y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:26:03) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0
x = zeros(n)
while (n-1) >= h:
	x[h] = i
	h += 1
	i += 1
print(y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:44:20) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0
x = zeros(n)
while (n-1) >= h:
	x[h] = i
	h += 1
	i += 1
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:58:14) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0
x = zeros(n)
d = zeros(n)

while (n-1) >= h:
	x[h] = h
	h += 1
	
while size(d) >= i:
	d[i] = ((a*(d[i]**2))/2) +v*d[i]
	i += 1



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:02:13) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

while n >= i:
	m = d[i]
	d[i] = ((a*m**2)/2) + m 
	i += 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:02:20) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

while n >= i:
	m = d[i]
	d[i] = ((a*m**2)/2) + m 
	i += 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:02:24) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

while n >= i:
	m = d[i]
	d[i] = ((a*m**2)/2) + m 
	i += 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:26:45) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

while size(x) >= i:
	m = d[i]
	d[i] = ((a*m**2)/2) + m 
	i += 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:27:17) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

while size(x) >= i:
	
	d[i] = ((a*d[i]**2)/2) + v*d[i] 
	i += 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:27:38) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

while size(x) >= i:
	
	d[i] = x[i]
	i += 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:27:43) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

while size(x) >= i:
	d[i] = x[i]
	i += 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:28:48) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

while size(x) >= i:
	d[1] = d[i]*2

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:29:55) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

while size(x) >= i:
	d[1] = d[i]*2
	i += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:30:07) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

while size(x) >= i:
	d[1] = d[1]*2
	i += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:30:21) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

while size(x) >= i:
	d[1] = x[1]*2
	i += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:30:36) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

while size(x) >= i:
	d[i] = x[1]*2
	i += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:30:58) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)


print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:31:35) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

d[i] = x[i]
print(d)
-- EXECUTION TIME:
0.400877
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:31:35) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

d[i] = x[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:31:47) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

d[i] = x[1]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:31:53) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
m = 0
x = arange(n)
d = zeros(n)

d[i] = x[2]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:33:20) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n)

while size(x) >= h:
	d[i] = a
	h += 1
	i += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:33:30) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n)

while size(x) >= h:
	d = a
	h += 1
	i += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:33:48) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n)

while size(x) >= h:
	d = d[i]*a
	h += 1
	i += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:34:03) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n)

while size(x) >= h:
	d = d[i*a]
	h += 1
	i += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:38:43) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n)

d[i] = d[i] * a
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:38:53) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n)

d[i] = d[i] + a
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:39:59) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0


i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n)

while size(x) >= h:
	print=1+1
	h+=1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:40:21) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0


i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(x) >= h:
	print=1+1
	h+=1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:40:37) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0


i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(x) >= h:
	print=1+1
	h+=1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:40:54) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0


i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(x) >= h:
	print=1+1
	h+=1
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:41:05) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0


i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:41:17) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0


i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(n) >= h:
	print=1+1
	h+=1
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:41:23) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0


i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(n) >= h:
	print=1+1
	h+=1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:42:08) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0


i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(d) >= h:
	print(1+1)
	h+=1
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:42:45) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0


i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(d) >= h:
	q = d[i]**2
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:42:50) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0


i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(d) >= h:
	q = d[i]**2
	print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:42:59) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0


i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(d) >= h:
	q = d[i]**2
	h += 1
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:45:21) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0
j = 0
f = 0
t = 0 

i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(d) >= h:
	q = d[i]**2
	w = q*a 
	t = w/2
	f = v*d[i]
	j = f+t
	d[i] = j
	i += 1
	h += 1
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:45:23) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0
j = 0
f = 0
t = 0 
i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(d) >= h:
	q = d[i]**2
	w = q*a 
	t = w/2
	f = v*d[i]
	j = f+t
	d[i] = j
	i += 1
	h += 1
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:45:33) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0
j = 0
f = 0
t = 0 
i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(d) >= h:
	q = d[i]+2
	w = q*a 
	t = w/2
	f = v*d[i]
	j = f+t
	d[i] = j
	i += 1
	h += 1
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:45:49) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0
j = 0
f = 0
t = 0 
i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(d) >= h:
	w = q*a 
	t = w/2
	f = v*d[i]
	j = f+t
	d[i] = j
	i += 1
	h += 1
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:45:56) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0
j = 0
f = 0
t = 0 
i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(d) >= h:
	w = q*a 
	t = w/2
	j = f+t
	d[i] = j
	i += 1
	h += 1
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:46:05) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0
j = 0
f = 0
t = 0 
i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(d) >= h:
	w = q*a 
	t = w/2
	j = f+t
	i += 1
	h += 1
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:46:33) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0
j = 0
f = 0
t = 0 
i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(d) >= h:
	d[i] = x[i]
	i += 1
	h += 1
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:46:39) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0
j = 0
f = 0
t = 0 
i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(d) >= h:
	d[h] = x[i]
	i += 1
	h += 1
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:46:49) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

q = 0
w = 0
t = 0
j = 0
f = 0
t = 0 
i = 0
h = 0
m = 0
x = arange(n)
d = zeros(n,dtype=int)

while size(d) >= h:
	d[i] = x[h]
	i += 1
	h += 1
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:49:13) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n,dtype=int)

while n >= h:
	d[i] = x[h]
	i += 1
	h += 1
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:52:21) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n,dtype=int)

while n >= h:
	d[i] = x[h]
	h += 1
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:52:58) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n,dtype=int)
d[i] = x[h]
while n >= h:
	1+1
	h += 1
print(d[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:53:03) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n,dtype=int)
d[i] = x[h]
while n >= h:
	1+1
	h += 1
print(d[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:53:14) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n,dtype=int)
d[i] = x[h]
while n >= h:
	1+1
	h += 1
d[i] = x[h]
print(d[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:53:26) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n,dtype=int)
d[i] = x[h]
while n > h:
	1+1
	h += 1
d[i] = x[h]
print(d[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:55:12) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n,dtype=int)
d[i] = x[h]

print(d[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:55:19) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 3

x = arange(n)
d = zeros(n,dtype=int)
d[i] = x[h]

print(d[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:55:33) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 2

x = arange(n)
d = zeros(n,dtype=int)
d[i] = x[h]

print(d[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:55:40) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 2

x = arange(n)
d = zeros(n,dtype=int)
d[i] = x[h]

print(d[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:56:13) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n,dtype=int)
while n > h:
	d[i] = x[h]

print(d[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:56:23) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n,dtype=int)
while n > h:
	d[i] = x[h]
	i+=1
print(d[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:57:52) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n,dtype=int)
while n > h:
	d[i] = v
	i+=1
print(d[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:58:00) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n,dtype=int)
while n > h:
	d[i] = 1
	i+=1
print(d[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:58:09) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n,dtype=int)
d[i] = 1
while n > h:
	
	i+=1
print(d[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:00:14) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = linspace(0, n, n-1, dtype=int)
d = zeros(n,dtype=int)
d[i] = 1
while n > h:
	
	i+=1
print(d[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:00:28) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = linspace(0, n, n-1, dtype=int)
d = zeros(n,dtype=int)
d[i] = 1
print(d[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:03:50) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = linspace(0, n, n-1)
d = zeros(n,dtype=int)

while size(x) > h:
	d[h] = ((a*(x[i]**2))/2) +v*x[i]
	h += 1
	i += 1
print(d[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:03:59) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = linspace(0, n, n-1)
d = zeros(n,dtype=int)

while size(x) > h:
	d[h] = ((a*(x[i]**2))/2) +v*x[i]
	h += 1
	i += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:04:28) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = linspace(0, n, n-1)
d = zeros(n,dtype=int)

while size(x) > h:
	d[h] = ((a*(x[i]**2))/2) +v*x[i]
	h += 1
	i += 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:04:45) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(0, n, n-1)
d = zeros(n,dtype=int)

while size(x) > h:
	d[h] = ((a*(x[i]**2))/2) +v*x[i]
	h += 1
	i += 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:05:01) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n,dtype=int)

while size(x) > h:
	d[h] = ((a*(x[i]**2))/2) +v*x[i]
	h += 1
	i += 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:05:06) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n)

while size(x) > h:
	d[h] = ((a*(x[i]**2))/2) +v*x[i]
	h += 1
	i += 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:05:13) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n-1)
d = zeros(n)

while size(x) > h:
	d[h] = ((a*(x[i]**2))/2) +v*x[i]
	h += 1
	i += 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:05:27) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n)

while size(x) > h:
	d[h] = ((a*(x[i]**2))/2) +v*x[i]
	h += 1
	i += 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:05:34) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n)

while size(x) > h:
	d[h] = ((a*(x[i]**2))/2) +v*x[i]
	h += 1
	i += 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:05:44) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n)

while size(x) > h:
	d[h] = ((a*(x[i]**2))/2) +v*x[i]
	h += 1
	i += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:05:49) 
-- CODE:
from numpy import *

a = float(input())
v = float(input())
n = int(input())

i = 0
h = 0

x = arange(n)
d = zeros(n)

while size(x) > h:
	d[h] = ((a*(x[i]**2))/2) +v*x[i]
	h += 1
	i += 1
print(d)
-- EXECUTION TIME:
0.377665
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
